Update working experience

--- a/it/index.html
+++ b/it/index.html
@@ -94,7 +94,7 @@
           <div class="resume-content">
             <h3 class="mb-0">PHP Developer</h3>
             <div class="subheading mb-3">IT Oeste - Buenos Aires - Argentina</div>
-            <p>Sviluppo di un'applicazione web con PHP/Laravel e MySQL.</p>
+            <p>Sviluppo di applicazioni web con PHP/Laravel e MySQL.</p>
           </div>
           <div class="resume-date text-md-right">
             <span class="text-primary">Dec 2019 - Actually</span>
